Version 0.7.0
http://couchdb-python.googlecode.com/hg/?r=default
(???, from branches/0.7.x)

 * Prevent `schema.ListField` objects from sharing the same default (issue 107).
 * Added a `changes()` method to the `client.Database` class (issue 103).
 * Added an optional argument to the 'Database.compact` method to enable
   view compaction (the rest of issue 37).

Version 0.6.1
http://couchdb-python.googlecode.com/hg/?r=0.6.1
(Dec 14, 2009, from branches/0.6.x)

 * Compatible with CouchDB 0.9.x and 0.10.x.
 * Removed debugging statement from `json` module (issue 82).
 * Fixed a few bugs resulting from typos.
 * Added a `replicate()` method to the `client.Server` class (issue 61).
 * Honor the boundary argument in the dump script code (issue 100).
 * Added a `stats()` method to the `client.Server` class.
 * Added a `tasks()` method to the `client.Server` class.
 * Allow slashes in path components passed to the uri function (issue 96).
 * `schema.DictField` objects now have a separate backing dictionary for each
   instance of their `schema.Document` (issue 101).
 * `schema.ListField` proxy objects now have a more consistent (though somewhat
   slower) `count()` method (issue 91).
 * `schema.ListField` objects now have correct behavior for slicing operations
   and the `pop()` method (issue 92).
 * Added a `revisions()` method to the Database class (issue 99).
 * Make sure we always return UTF-8 from the view server (issue 81).


Version 0.6
http://couchdb-python.googlecode.com/hg/?r=0.6.0
(Jul 2, 2009, from 0.6.x)

 * Compatible with CouchDB 0.9.x.
 * `schema.DictField` instances no longer need to be bound to a `Schema`
   (issue 51).
 * Added a `config` property to the `client.Server` class (issue 67).
 * Added a `compact()` method to the `client.Database` class (issue 37).
 * Changed the `update()` method of the `client.Database` class to simplify
   the handling of errors. The method now returns a list of `(success, docid,