@@ -12,7 +12,7 @@
 >>> server = Server('http://localhost:5984/')
 >>> db = server.create('python-tests')
 
-To define a document schema, you declare a Python class inherited from
+To define a document mapping, you declare a Python class inherited from
 `Document`, and add any number of `Field` attributes:
 
 >>> class Person(Document):
@@ -65,7 +65,7 @@ from time import strptime, struct_time
 
 from couchdb.design import ViewDefinition
 
-__all__ = ['Schema', 'Document', 'Field', 'TextField', 'FloatField',
+__all__ = ['Mapping', 'Document', 'Field', 'TextField', 'FloatField',
            'IntegerField', 'LongField', 'BooleanField', 'DecimalField',
            'DateField', 'DateTimeField', 'TimeField', 'DictField', 'ListField']
 __docformat__ = 'restructuredtext en'
@@ -77,7 +77,7 @@ class Field(object):
     """Basic unit for mapping a piece of data between Python and JSON.
     
     Instances of this class can be added to subclasses of `Document` to describe
-    the schema of a document.
+    the mapping of a document.
     """
 
     def __init__(self, name=None, default=None):
@@ -109,7 +109,7 @@ class Field(object):
         return self._to_python(value)
 
 
-class SchemaMeta(type):
+class MappingMeta(type):
 
     def __new__(cls, name, bases, d):
         fields = {}
@@ -125,8 +125,8 @@ class SchemaMeta(type):
         return type.__new__(cls, name, bases, d)
 
 
-class Schema(object):
-    __metaclass__ = SchemaMeta
+class Mapping(object):
+    __metaclass__ = MappingMeta
 
     def __init__(self, **values):
         self._data = {}
@@ -214,7 +214,7 @@ class View(object):
     `Document` subclass the descriptor is bound to. In this example, it would
     return instances of the `Person` class. But please note that this requires
     the values of the view results to be dictionaries that can be mapped to the
-    schema defined by the containing `Document` class. Alternatively, the
+    mapping defined by the containing `Document` class. Alternatively, the
     ``include_docs`` query option can be used to inline the actual documents in
     the view results, which will then be used instead of the values.
     
@@ -285,21 +285,21 @@ class View(object):
                               wrapper=wrapper, **self.defaults)
 
 
-class DocumentMeta(SchemaMeta):
+class DocumentMeta(MappingMeta):
 
     def __new__(cls, name, bases, d):
         for attrname, attrval in d.items():
             if isinstance(attrval, View):
                 if not attrval.name:
                     attrval.name = attrname
-        return SchemaMeta.__new__(cls, name, bases, d)
+        return MappingMeta.__new__(cls, name, bases, d)
 
 
-class Document(Schema):
+class Document(Mapping):
     __metaclass__ = DocumentMeta
 
     def __init__(self, id=None, **values):
-        Schema.__init__(self, **values)
+        Mapping.__init__(self, **values)
         if id is not None:
             self.id = id
 
@@ -332,7 +332,7 @@ class Document(Schema):
         """Return the fields as a list of ``(name, value)`` tuples.
         
         This method is provided to enable easy conversion to native dictionary
-        objects, for example to allow use of `schema.Document` instances with
+        objects, for example to allow use of `mapping.Document` instances with
         `client.Database.update`.
         
         >>> class Post(Document):
@@ -380,7 +380,7 @@ class Document(Schema):
     @classmethod
     def query(cls, db, map_fun, reduce_fun, language='javascript', **options):
         """Execute a CouchDB temporary view and map the result values back to
-        objects of this schema.
+        objects of this mapping.
         
         Note that by default, any properties of the document that are not
         included in the values of the view will be treated as if they were
@@ -399,7 +399,7 @@ class Document(Schema):
     @classmethod
     def view(cls, db, viewname, **options):
         """Execute a CouchDB named view and map the result values back to
-        objects of this schema.
+        objects of this mapping.
         
         Note that by default, any properties of the document that are not
         included in the values of the view will be treated as if they were
@@ -416,32 +416,32 @@ class Document(Schema):
 
 
 class TextField(Field):
-    """Schema field for string values."""
+    """Mapping field for string values."""
     _to_python = unicode
 
 
 class FloatField(Field):
-    """Schema field for float values."""
+    """Mapping field for float values."""
     _to_python = float
 
 
 class IntegerField(Field):
-    """Schema field for integer values."""
+    """Mapping field for integer values."""
     _to_python = int
 
 
 class LongField(Field):
-    """Schema field for long integer values."""
+    """Mapping field for long integer values."""
     _to_python = long
 
 
 class BooleanField(Field):
-    """Schema field for boolean values."""
+    """Mapping field for boolean values."""
     _to_python = bool
 
 
 class DecimalField(Field):
-    """Schema field for decimal values."""
+    """Mapping field for decimal values."""
 
     def _to_python(self, value):
         return Decimal(value)
@@ -451,7 +451,7 @@ class DecimalField(Field):
 
 
 class DateField(Field):
-    """Schema field for storing dates.
+    """Mapping field for storing dates.
     
     >>> field = DateField()
     >>> field._to_python('2007-04-01')
@@ -477,7 +477,7 @@ class DateField(Field):
 
 
 class DateTimeField(Field):
-    """Schema field for storing date/time values.
+    """Mapping field for storing date/time values.
     
     >>> field = DateTimeField()
     >>> field._to_python('2007-04-01T15:30:00Z')
@@ -508,7 +508,7 @@ class DateTimeField(Field):
 
 
 class TimeField(Field):
-    """Schema field for storing times.
+    """Mapping field for storing times.
     
     >>> field = TimeField()
     >>> field._to_python('15:30:00')
@@ -544,7 +544,7 @@ class DictField(Field):
     >>> class Post(Document):
     ...     title = TextField()
     ...     content = TextField()
-    ...     author = DictField(Schema.build(
+    ...     author = DictField(Mapping.build(
     ...         name = TextField(),
     ...         email = TextField()
     ...     ))
@@ -568,22 +568,22 @@ class DictField(Field):
 
     >>> del server['python-tests']
     """
-    def __init__(self, schema=None, name=None, default=None):
+    def __init__(self, mapping=None, name=None, default=None):
         default = default or {}
         Field.__init__(self, name=name, default=lambda: default.copy())
-        self.schema = schema
+        self.mapping = mapping
 
     def _to_python(self, value):
-        if self.schema is None:
+        if self.mapping is None:
             return value
         else:
-            return self.schema.wrap(value)
+            return self.mapping.wrap(value)
 
     def _to_json(self, value):
-        if self.schema is None:
+        if self.mapping is None:
             return value
-        if not isinstance(value, Schema):
-            value = self.schema(**value)
+        if not isinstance(value, Mapping):
+            value = self.mapping(**value)
         return value.unwrap()
 
 
@@ -598,7 +598,7 @@ class ListField(Field):
     ...     title = TextField()
     ...     content = TextField()
     ...     pubdate = DateTimeField(default=datetime.now)
-    ...     comments = ListField(DictField(Schema.build(
+    ...     comments = ListField(DictField(Mapping.build(
     ...         author = TextField(),
     ...         content = TextField(),
     ...         time = DateTimeField()
@@ -629,7 +629,7 @@ class ListField(Field):
         if type(field) is type:
             if issubclass(field, Field):
                 field = field()
-            elif issubclass(field, Schema):
+            elif issubclass(field, Mapping):
                 field = DictField(field)
         self.field = field
 
