@@ -11,7 +11,7 @@ import doctest
 import os
 import unittest
 
-from couchdb import client, schema
+from couchdb import client, mapping
 
 
 class DocumentTestCase(unittest.TestCase):
@@ -32,8 +32,8 @@ class DocumentTestCase(unittest.TestCase):
             pass
 
     def test_mutable_fields(self):
-        class Test(schema.Document):
-            d = schema.DictField()
+        class Test(mapping.Document):
+            d = mapping.DictField()
         a = Test()
         b = Test()
         a.d['x'] = True
@@ -41,8 +41,8 @@ class DocumentTestCase(unittest.TestCase):
         self.assertFalse(b.d.get('x'))
 
     def test_automatic_id(self):
-        class Post(schema.Document):
-            title = schema.TextField()
+        class Post(mapping.Document):
+            title = mapping.TextField()
         post = Post(title='Foo bar')
         assert post.id is None
         post.store(self.db)
@@ -50,16 +50,16 @@ class DocumentTestCase(unittest.TestCase):
         self.assertEqual('Foo bar', self.db[post.id]['title'])
 
     def test_explicit_id_via_init(self):
-        class Post(schema.Document):
-            title = schema.TextField()
+        class Post(mapping.Document):
+            title = mapping.TextField()
         post = Post(id='foo_bar', title='Foo bar')
         self.assertEqual('foo_bar', post.id)
         post.store(self.db)
         self.assertEqual('Foo bar', self.db['foo_bar']['title'])
 
     def test_explicit_id_via_setter(self):
-        class Post(schema.Document):
-            title = schema.TextField()
+        class Post(mapping.Document):
+            title = mapping.TextField()
         post = Post(title='Foo bar')
         post.id = 'foo_bar'
         self.assertEqual('foo_bar', post.id)
@@ -67,8 +67,8 @@ class DocumentTestCase(unittest.TestCase):
         self.assertEqual('Foo bar', self.db['foo_bar']['title'])
 
     def test_change_id_failure(self):
-        class Post(schema.Document):
-            title = schema.TextField()
+        class Post(mapping.Document):
+            title = mapping.TextField()
         post = Post(title='Foo bar')
         post.store(self.db)
         post = Post.load(self.db, post.id)
@@ -79,8 +79,8 @@ class DocumentTestCase(unittest.TestCase):
             self.assertEqual('id can only be set on new documents', e.args[0])
 
     def test_batch_update(self):
-        class Post(schema.Document):
-            title = schema.TextField()
+        class Post(mapping.Document):
+            title = mapping.TextField()
         post1 = Post(title='Foo bar')
         post2 = Post(title='Foo baz')
         results = self.db.update([post1, post2])
@@ -108,12 +108,14 @@ class ListFieldTestCase(unittest.TestCase):
 
     def test_to_json(self):
         # See <http://code.google.com/p/couchdb-python/issues/detail?id=14>
-        class Post(schema.Document):
-            title = schema.TextField()
-            comments = schema.ListField(schema.DictField(schema.Schema.build(
-                author = schema.TextField(),
-                content = schema.TextField(),
-            )))
+        class Post(mapping.Document):
+            title = mapping.TextField()
+            comments = mapping.ListField(mapping.DictField(
+                mapping.Mapping.build(
+                    author = mapping.TextField(),
+                    content = mapping.TextField(),
+                )
+            ))
         post = Post(title='Foo bar')
         post.comments.append(author='myself', content='Bla bla')
         post.comments = post.comments
@@ -121,79 +123,79 @@ class ListFieldTestCase(unittest.TestCase):
                          post.comments)
 
     def test_proxy_append(self):
-        class Thing(schema.Document):
-            numbers = schema.ListField(schema.DecimalField)
+        class Thing(mapping.Document):
+            numbers = mapping.ListField(mapping.DecimalField)
         thing = Thing(numbers=[Decimal('1.0'), Decimal('2.0')])
         thing.numbers.append(Decimal('3.0'))
         self.assertEqual(3, len(thing.numbers))
         self.assertEqual(Decimal('3.0'), thing.numbers[2])
 
     def test_proxy_append_kwargs(self):
-        class Thing(schema.Document):
-            numbers = schema.ListField(schema.DecimalField)
+        class Thing(mapping.Document):
+            numbers = mapping.ListField(mapping.DecimalField)
         thing = Thing()
         self.assertRaises(TypeError, thing.numbers.append, foo='bar')
 
     def test_proxy_contains(self):
-        class Thing(schema.Document):
-            numbers = schema.ListField(schema.DecimalField)
+        class Thing(mapping.Document):
+            numbers = mapping.ListField(mapping.DecimalField)
         thing = Thing(numbers=[Decimal('1.0'), Decimal('2.0')])
-        assert isinstance(thing.numbers, schema.ListField.Proxy)
+        assert isinstance(thing.numbers, mapping.ListField.Proxy)
         assert '1.0' not in thing.numbers
         assert Decimal('1.0') in thing.numbers
 
     def test_proxy_count(self):
-        class Thing(schema.Document):
-            numbers = schema.ListField(schema.DecimalField)
+        class Thing(mapping.Document):
+            numbers = mapping.ListField(mapping.DecimalField)
         thing = Thing(numbers=[Decimal('1.0'), Decimal('2.0')])
         self.assertEqual(1, thing.numbers.count(Decimal('1.0')))
         self.assertEqual(0, thing.numbers.count('1.0'))
 
     def test_proxy_index(self):
-        class Thing(schema.Document):
-            numbers = schema.ListField(schema.DecimalField)
+        class Thing(mapping.Document):
+            numbers = mapping.ListField(mapping.DecimalField)
         thing = Thing(numbers=[Decimal('1.0'), Decimal('2.0')])
         self.assertEqual(0, thing.numbers.index(Decimal('1.0')))
         self.assertRaises(ValueError, thing.numbers.index, '3.0')
 
     def test_proxy_insert(self):
-        class Thing(schema.Document):
-            numbers = schema.ListField(schema.DecimalField)
+        class Thing(mapping.Document):
+            numbers = mapping.ListField(mapping.DecimalField)
         thing = Thing(numbers=[Decimal('1.0'), Decimal('2.0')])
         thing.numbers.insert(0, Decimal('0.0'))
         self.assertEqual(3, len(thing.numbers))
         self.assertEqual(Decimal('0.0'), thing.numbers[0])
 
     def test_proxy_insert_kwargs(self):
-        class Thing(schema.Document):
-            numbers = schema.ListField(schema.DecimalField)
+        class Thing(mapping.Document):
+            numbers = mapping.ListField(mapping.DecimalField)
         thing = Thing()
         self.assertRaises(TypeError, thing.numbers.insert, 0, foo='bar')
 
     def test_proxy_remove(self):
-        class Thing(schema.Document):
-            numbers = schema.ListField(schema.DecimalField)
+        class Thing(mapping.Document):
+            numbers = mapping.ListField(mapping.DecimalField)
         thing = Thing()
         thing.numbers.append(Decimal('1.0'))
         thing.numbers.remove(Decimal('1.0'))
 
     def test_proxy_iter(self):
-        class Thing(schema.Document):
-            numbers = schema.ListField(schema.DecimalField)
+        class Thing(mapping.Document):
+            numbers = mapping.ListField(mapping.DecimalField)
         self.db['test'] = {'numbers': ['1.0', '2.0']}
         thing = Thing.load(self.db, 'test')
         assert isinstance(thing.numbers[0], Decimal)
 
     def test_proxy_iter_dict(self):
-        class Post(schema.Document):
-            comments = schema.ListField(schema.DictField)
+        class Post(mapping.Document):
+            comments = mapping.ListField(mapping.DictField)
         self.db['test'] = {'comments': [{'author': 'Joe', 'content': 'Hey'}]}
         post = Post.load(self.db, 'test')
         assert isinstance(post.comments[0], dict)
 
     def test_proxy_pop(self):
-        class Thing(schema.Document):
-            numbers = schema.ListField(schema.DecimalField)
+        class Thing(mapping.Document):
+            numbers = mapping.ListField(mapping.DecimalField)
         thing = Thing()
         thing.numbers = [Decimal('%d' % i) for i in range(3)]
         self.assertEqual(thing.numbers.pop(), Decimal('2.0'))
@@ -201,8 +203,8 @@ class ListFieldTestCase(unittest.TestCase):
         self.assertEqual(thing.numbers.pop(0), Decimal('0.0'))
 
     def test_proxy_slices(self):
-        class Thing(schema.Document):
-            numbers = schema.ListField(schema.DecimalField)
+        class Thing(mapping.Document):
+            numbers = mapping.ListField(mapping.DecimalField)
         thing = Thing()
         thing.numbers = [Decimal('%d' % i) for i in range(5)]
         ll = thing.numbers[1:3]
@@ -216,8 +218,8 @@ class ListFieldTestCase(unittest.TestCase):
         self.assertEquals(len(thing.numbers), 3)
 
     def test_mutable_fields(self):
-        class Thing(schema.Document):
-            numbers = schema.ListField(schema.DecimalField)
+        class Thing(mapping.Document):
+            numbers = mapping.ListField(mapping.DecimalField)
         thing = Thing.wrap({'_id': 'foo', '_rev': 1}) # no numbers
         thing.numbers.append('1.0')
         thing2 = Thing(id='thing2')
@@ -226,7 +228,7 @@ class ListFieldTestCase(unittest.TestCase):
 
 def suite():
     suite = unittest.TestSuite()
-    suite.addTest(doctest.DocTestSuite(schema))
+    suite.addTest(doctest.DocTestSuite(mapping))
     suite.addTest(unittest.makeSuite(DocumentTestCase, 'test'))
     suite.addTest(unittest.makeSuite(ListFieldTestCase, 'test'))
     return suite
