@@ -2,6 +2,9 @@ Version 0.7.0
 http://couchdb-python.googlecode.com/hg/?r=default
 (???, from branches/0.7.x)
 
+ * Breaking change: `couchdb.schema` has been renamed to `couchdb.mapping`.
+   This better reflects what is actually provided. Classes inside
+   `couchdb.mapping` have been similarly renamed (e.g. `Schema` -> `Mapping`).
  * Prevent `schema.ListField` objects from sharing the same default (issue 107).
  * Added a `changes()` method to the `client.Database` class (issue 103).
  * Added an optional argument to the 'Database.compact` method to enable
